--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "f7090e29",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "275d06ed",
    "metadata": {},
    "outputs": [],
@@ -28,6 +28,12 @@
     "pos = [5, 8.5, 15, 21.5]\n",
     "combinations = list(itertools.product(pos, repeat=4))\n",
     "df = pd.DataFrame(combinations, columns=[\"pos1\", \"pos2\", \"pos3\", \"pos4\"])\n",
+    "\n",
+    "# Add index columns\n",
+    "df[\"pos1_idx\"] = df[\"pos1\"].map({5: 1, 8.5: 2, 15: 3, 21.5: 4})\n",
+    "df[\"pos2_idx\"] = df[\"pos2\"].map({5: 1, 8.5: 2, 15: 3, 21.5: 4})\n",
+    "df[\"pos3_idx\"] = df[\"pos3\"].map({5: 1, 8.5: 2, 15: 3, 21.5: 4})\n",
+    "df[\"pos4_idx\"] = df[\"pos4\"].map({5: 1, 8.5: 2, 15: 3, 21.5: 4})\n",
     "\n",
     "df[\"CM_x\"] = df[\"pos1\"] - df[\"pos3\"]\n",
     "df[\"CM_y\"] = df[\"pos4\"] - df[\"pos2\"]\n",
@@ -44,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "9600cf3e",
    "metadata": {},
    "outputs": [
@@ -72,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "3356f31b",
    "metadata": {},
    "outputs": [
@@ -107,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "39e1543b",
    "metadata": {},
    "outputs": [
@@ -178,6 +184,11 @@
     "print(\"Best D-optimal design points:\")\n",
     "print(best_points)\n",
     "\n",
+    "df['isBest'] = False\n",
+    "for _, row in best_points.iterrows():\n",
+    "    mask = (np.isclose(df['CM_r'], row['CM_r'], atol=1e-6)) & (np.isclose(df['MoI'], row['MoI'], atol=1e-6))\n",
+    "    df.loc[mask, 'isBest'] = True\n",
+    "\n",
     "plt.figure()\n",
     "plt.scatter(df[\"CM_r\"], df[\"MoI\"], label=\"Candidate Points\")\n",
     "plt.scatter(best_points[\"CM_r\"], best_points[\"MoI\"], color='red', label=\"D-optimal Design Points\")\n",
@@ -190,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "57a7d461",
    "metadata": {},
    "outputs": [
@@ -207,8 +218,8 @@
           "dtype": "f8",
           "shape": "240, 4"
          },
-         "hovertemplate": "color=blue<br>Center of Mass Radius=%{x}<br>Center of Mass Angle (radians)=%{y}<br>Moment of Inertia=%{z}<br>pos1=%{customdata[0]}<br>pos2=%{customdata[1]}<br>pos3=%{customdata[2]}<br>pos4=%{customdata[3]}<extra></extra>",
-         "legendgroup": "blue",
+         "hovertemplate": "isBest=False<br>Center of Mass Radius=%{x}<br>Center of Mass Angle (radians)=%{y}<br>Moment of Inertia=%{z}<br>pos1=%{customdata[0]}<br>pos2=%{customdata[1]}<br>pos3=%{customdata[2]}<br>pos4=%{customdata[3]}<extra></extra>",
+         "legendgroup": "False",
          "marker": {
           "color": "blue",
           "opacity": 0.8,
@@ -216,7 +227,7 @@
           "symbol": "circle"
          },
          "mode": "markers",
-         "name": "blue",
+         "name": "False",
          "scene": "scene",
          "showlegend": true,
          "type": "scatter3d",
@@ -239,8 +250,8 @@
           "dtype": "f8",
           "shape": "16, 4"
          },
-         "hovertemplate": "color=red<br>Center of Mass Radius=%{x}<br>Center of Mass Angle (radians)=%{y}<br>Moment of Inertia=%{z}<br>pos1=%{customdata[0]}<br>pos2=%{customdata[1]}<br>pos3=%{customdata[2]}<br>pos4=%{customdata[3]}<extra></extra>",
-         "legendgroup": "red",
+         "hovertemplate": "isBest=True<br>Center of Mass Radius=%{x}<br>Center of Mass Angle (radians)=%{y}<br>Moment of Inertia=%{z}<br>pos1=%{customdata[0]}<br>pos2=%{customdata[1]}<br>pos3=%{customdata[2]}<br>pos4=%{customdata[3]}<extra></extra>",
+         "legendgroup": "True",
          "marker": {
           "color": "red",
           "opacity": 0.8,
@@ -248,7 +259,7 @@
           "symbol": "circle"
          },
          "mode": "markers",
-         "name": "red",
+         "name": "True",
          "scene": "scene",
          "showlegend": true,
          "type": "scatter3d",
@@ -270,7 +281,7 @@
         "height": 600,
         "legend": {
          "title": {
-          "text": "color"
+          "text": "isBest"
          },
          "tracegroupgap": 0
         },
@@ -1097,19 +1108,13 @@
     }
    ],
    "source": [
-    "# Create a color column based on whether (CM_r, MoI) matches best_points\n",
-    "df['color'] = 'blue'\n",
-    "for _, row in best_points.iterrows():\n",
-    "    mask = (np.isclose(df['CM_r'], row['CM_r'], atol=1e-6)) & (np.isclose(df['MoI'], row['MoI'], atol=1e-6))\n",
-    "    df.loc[mask, 'color'] = 'red'\n",
-    "\n",
     "# Create an interactive 3D scatter plot with hover information\n",
     "fig = px.scatter_3d(df, \n",
     "                    x='CM_r', \n",
     "                    y='CM_phi', \n",
     "                    z='MoI',\n",
-    "                    color='color',\n",
-    "                    color_discrete_map={'blue': 'blue', 'red': 'red'},\n",
+    "                    color='isBest',\n",
+    "                    color_discrete_map={False: 'blue', True: 'red'},\n",
     "                    hover_data=['pos1', 'pos2', 'pos3', 'pos4'],\n",
     "                    title='Domain',\n",
     "                    labels={\n",
@@ -1143,6 +1148,48 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8d2c64e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   pos1  pos2  pos3  pos4  pos1_idx  pos2_idx  pos3_idx  pos4_idx  CM_x  CM_y  \\\n",
+      "0   5.0   5.0   5.0  21.5         1         1         1         4   0.0  16.5   \n",
+      "1  15.0  21.5  21.5  21.5         3         4         4         4  -6.5   0.0   \n",
+      "2   5.0   5.0   5.0   8.5         1         1         1         2   0.0   3.5   \n",
+      "3  21.5  15.0  21.5  21.5         4         3         4         4   0.0   6.5   \n",
+      "4   5.0   5.0   8.5   5.0         1         1         2         1  -3.5   0.0   \n",
+      "5   5.0  21.5  21.5  21.5         1         4         4         4 -16.5   0.0   \n",
+      "6   5.0   5.0  21.5   5.0         1         1         4         1 -16.5   0.0   \n",
+      "7  21.5   5.0  21.5  21.5         4         1         4         4   0.0  16.5   \n",
+      "\n",
+      "       CM_r    CM_phi       MoI  isBest  \n",
+      "0  0.414214  1.570796 -0.500000    True  \n",
+      "1 -0.442886  3.141593  0.728702    True  \n",
+      "2 -0.700015  1.570796 -0.945969    True  \n",
+      "3 -0.442886  1.570796  0.728702    True  \n",
+      "4 -0.700015  3.141593 -0.945969    True  \n",
+      "5  0.414214  3.141593  0.500000    True  \n",
+      "6  0.414214  3.141593 -0.500000    True  \n",
+      "7  0.414214  1.570796  0.500000    True  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df_experiment = df[df['isBest']].reset_index(drop=True)\n",
+    "df_experiment = df_experiment[df_experiment[\"CM_phi\"]>0].reset_index(drop=True)\n",
+    "df_experiment_shuffled = df_experiment.sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "print(df_experiment_shuffled)\n",
+    "\n",
+    "# save only pos1_idx, pos2_idx, pos3_idx, pos4_idx to csv\n",
+    "df_experiment_shuffled[[\"pos1_idx\", \"pos2_idx\", \"pos3_idx\", \"pos4_idx\", \"CM_phi\"]].to_csv(\"data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8788636d",
    "metadata": {},
    "outputs": [],
    "source": []
