--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "8d2c64e3",
    "metadata": {},
    "outputs": [
@@ -1155,35 +1155,27 @@
      "output_type": "stream",
      "text": [
       "   pos1  pos2  pos3  pos4  pos1_idx  pos2_idx  pos3_idx  pos4_idx  CM_x  CM_y  \\\n",
-      "0   5.0   5.0   5.0  21.5         1         1         1         4   0.0  16.5   \n",
-      "1  15.0  21.5  21.5  21.5         3         4         4         4  -6.5   0.0   \n",
-      "2   5.0   5.0   5.0   8.5         1         1         1         2   0.0   3.5   \n",
-      "3  21.5  15.0  21.5  21.5         4         3         4         4   0.0   6.5   \n",
-      "4   5.0   5.0   8.5   5.0         1         1         2         1  -3.5   0.0   \n",
-      "5   5.0  21.5  21.5  21.5         1         4         4         4 -16.5   0.0   \n",
-      "6   5.0   5.0  21.5   5.0         1         1         4         1 -16.5   0.0   \n",
-      "7  21.5   5.0  21.5  21.5         4         1         4         4   0.0  16.5   \n",
+      "0  21.5   5.0   5.0   5.0         4         1         1         1  16.5   0.0   \n",
+      "1  21.5  21.5  15.0  21.5         4         4         3         4   6.5   0.0   \n",
+      "2   8.5   5.0   5.0   5.0         2         1         1         1   3.5   0.0   \n",
+      "3  21.5  21.5   5.0  21.5         4         4         1         4  16.5   0.0   \n",
       "\n",
-      "       CM_r    CM_phi       MoI  isBest  \n",
-      "0  0.414214  1.570796 -0.500000    True  \n",
-      "1 -0.442886  3.141593  0.728702    True  \n",
-      "2 -0.700015  1.570796 -0.945969    True  \n",
-      "3 -0.442886  1.570796  0.728702    True  \n",
-      "4 -0.700015  3.141593 -0.945969    True  \n",
-      "5  0.414214  3.141593  0.500000    True  \n",
-      "6  0.414214  3.141593 -0.500000    True  \n",
-      "7  0.414214  1.570796  0.500000    True  \n"
+      "       CM_r  CM_phi       MoI  isBest  \n",
+      "0  0.414214     0.0 -0.500000    True  \n",
+      "1 -0.442886     0.0  0.728702    True  \n",
+      "2 -0.700015     0.0 -0.945969    True  \n",
+      "3  0.414214     0.0  0.500000    True  \n"
      ]
     }
    ],
    "source": [
     "df_experiment = df[df['isBest']].reset_index(drop=True)\n",
-    "df_experiment = df_experiment[df_experiment[\"CM_phi\"]>0].reset_index(drop=True)\n",
+    "df_experiment = df_experiment[df_experiment[\"CM_phi\"]==0].reset_index(drop=True)\n",
     "df_experiment_shuffled = df_experiment.sample(frac=1, random_state=42).reset_index(drop=True)\n",
     "print(df_experiment_shuffled)\n",
     "\n",
     "# save only pos1_idx, pos2_idx, pos3_idx, pos4_idx to csv\n",
-    "df_experiment_shuffled[[\"pos1_idx\", \"pos2_idx\", \"pos3_idx\", \"pos4_idx\", \"CM_phi\"]].to_csv(\"data.csv\", index=False)"
+    "df_experiment_shuffled[[\"pos1_idx\", \"pos2_idx\", \"pos3_idx\", \"pos4_idx\"]].to_csv(\"data.csv\", index=False)"
    ]
   },
   {
