copies matrix calc

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "id": "f7090e29",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "id": "275d06ed",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "id": "9600cf3e",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "id": "3356f31b",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "id": "39e1543b",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
+   "id": "8fc894b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrice X :\n",
+      "[[ 1.         -0.7000153  -0.94596913  0.66219287]\n",
+      " [ 1.          0.41421356 -0.5        -0.20710678]\n",
+      " [ 1.          0.41421356  0.5         0.20710678]\n",
+      " [ 1.         -0.44288557  0.72870212 -0.32273165]]\n",
+      "\n",
+      "Matrice d'information X^T X :\n",
+      "[[ 4.         -0.31447375 -0.21726701  0.33946122]\n",
+      " [-0.31447375  1.0293148   0.33946122 -0.32061195]\n",
+      " [-0.21726701  0.33946122  1.92586436 -0.65448246]\n",
+      " [ 0.33946122 -0.32061195 -0.65448246  0.62844155]]\n",
+      "\n",
+      "Matrice de dispersion (X^T X)^(-1) :\n",
+      "[[ 0.26465847  0.04338    -0.02917704 -0.15121374]\n",
+      " [ 0.04338     1.16221379 -0.00994767  0.5591343 ]\n",
+      " [-0.02917704 -0.00994767  0.806929    0.85105132]\n",
+      " [-0.15121374  0.5591343   0.85105132  2.8444881 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Construction de la matrice X pour les points D-optimaux\n",
+    "X_best = np.column_stack([\n",
+    "    np.ones(len(best_points)),\n",
+    "    best_points['CM_r'],\n",
+    "    best_points['MoI'],\n",
+    "    best_points['CM_r'] * best_points['MoI']\n",
+    "])\n",
+    "\n",
+    "# Matrice d'information\n",
+    "XtX = X_best.T @ X_best\n",
+    "\n",
+    "# Matrice de dispersion (normalisée, sans sigma^2)\n",
+    "Dispersion = np.linalg.inv(XtX)\n",
+    "\n",
+    "print(\"Matrice X :\")\n",
+    "print(X_best)\n",
+    "\n",
+    "print(\"\\nMatrice d'information X^T X :\")\n",
+    "print(XtX)\n",
+    "\n",
+    "print(\"\\nMatrice de dispersion (X^T X)^(-1) :\")\n",
+    "print(Dispersion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "57a7d461",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "id": "8d2c64e3",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "id": "8788636d",
    "metadata": {},
    "outputs": [
@@ -1250,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "id": "63e15a38",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "id": "8053ba68",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "id": "e79aea36",
    "metadata": {},
    "outputs": [
@@ -1429,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "id": "ef59e28f",
    "metadata": {},
    "outputs": [
@@ -1459,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "id": "2a98a71a",
    "metadata": {},
    "outputs": [
@@ -1490,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "id": "ee855eb4",
    "metadata": {},
    "outputs": [
@@ -1504,7 +1559,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 15,
    "id": "49415081",
    "metadata": {},
    "outputs": [
@@ -1592,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 16,
    "id": "23c6683c",
    "metadata": {},
    "outputs": [
@@ -1625,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 17,
    "id": "578f85ff",
    "metadata": {},
    "outputs": [
@@ -1694,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 18,
    "id": "7726bc80",
    "metadata": {},
    "outputs": [
@@ -1740,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 19,
    "id": "75091529",
    "metadata": {},
    "outputs": [
@@ -1782,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 20,
    "id": "6b192798",
    "metadata": {},
    "outputs": [
